# cs3210-labs

./: .gitignore  README.md  flake.nix
boot/: Cargo.toml  Makefile
boot/.cargo/: layout.ld
boot/src/: main.rs
ext/rpi3-led/: config.txt
ext/rpi3-uart/: config.txt
kern/: Cargo.toml  Makefile  qemu.sh
kern/.cargo/: layout.ld
kern/src/: console.rs  main.rs  mutex.rs  shell.rs
lib/pi/: Cargo.toml
lib/pi/src/: common.rs  gpio.rs  lib.rs  timer.rs  uart.rs
lib/pi/src/sd/: commands.rs  mod.rs
lib/shim/: Cargo.toml
lib/shim/src/: lib.rs  macros.rs  no_std.rs
lib/stack-vec/src/: lib.rs
lib/ttywrite/: Cargo.toml  test.sh
lib/ttywrite/src/: main.rs
lib/volatile/src/: lib.rs
lib/xmodem/: Cargo.toml
lib/xmodem/src/: lib.rs
tut/0-rustlings/: info.toml  rust-project.json
tut/0-rustlings/exercises/: test1.rs  test3.rs  test4.rs
tut/0-rustlings/exercises/conversions/: from_into.rs  from_str.rs  try_from_into.rs
tut/0-rustlings/exercises/cs140e/: builder.rs  expressions.rs  lifetimes-4.rs  trait-impl.rs  try.rs
tut/0-rustlings/exercises/enums/: enums3.rs
tut/0-rustlings/exercises/error_handling/: errorsn.rs
tut/0-rustlings/exercises/iterators/: iterators2.rs  iterators3.rs
tut/1-blinky/phase3/: Makefile  blinky.c
tut/1-blinky/phase4/: Makefile
tut/2-shell/questions/: bad-tests  blinky-states  bootloader-timeout  clone-for-pop  deref-in-tests  drop-container  enforcing  fake-states  invalid  led-pattern  lifetime  macros  push-fails  restricted-reads  shell-lookback  small-kernels  unique-volatile  write-fmt
(+3 files in other folders)
