[package]
name = "shim"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>"
]
edition = "2018"

[dependencies]
cfg-if = "0.1"
acid_io = { git = "https://github.com/5t0n3/acid_io.git", rev = "abeb816" }

[dev-dependencies]
hashbrown = "0.6.3"

# TODO: figure out how to supply std flag when no_std isn't provided
[features]
no_std = []
alloc = ["acid_io/alloc"]
